--- a/bootstrap.css
+++ b/bootstrap.css
@@ -5,7 +5,7 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
    
- ljlkjaljdlajdlkjalkjdlkja
+ seoncd commit ye to kjsahkjdsfkjdshf
 
 :root {
   --blue: #007bff;
